# rv

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/rv-cli/: Cargo.toml
crates/rv-cli/src/: main.rs
crates/rv-core/: Cargo.toml
crates/rv-core/src/: install.rs  lib.rs  lock.rs  manifest.rs  paths.rs  platform.rs  project.rs  registry.rs  resolve.rs  rubygems.rs  tool.rs
packaging/homebrew/: rv.rb.template
