[workspace]
resolver = "2"
members = ["crates/rv-core", "crates/rv-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["O6lvl4"]
license = "MIT"
repository = "https://github.com/O6lvl4/rv"
homepage = "https://github.com/O6lvl4/rv"
description = "Ruby version & gem manager. uv-grade speed."

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.17"
directories = "5"
semver = "1"
futures = "0.3"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
tar = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
