[package]
name = "rv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "rv: Ruby version & gem manager."

[[bin]]
name = "rv"
path = "src/main.rs"

[dependencies]
rv-core = { path = "../rv-core" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
reqwest.workspace = true
indicatif.workspace = true
futures.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
