[package]
name = "rv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for rv: resolve, install, store, manifest, lock."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
directories.workspace = true
semver.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
